Remove 0 rows for predictors of interest

--- a/final.model.Rmd
+++ b/final.model.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "final.model"
+title: "Final Model(?)"
 author: "Edward J. Lee"
 date: "2025-04-05"
 output: pdf_document
@@ -26,7 +26,14 @@ nrow(nhanes_filtered) #7094 observations
 nhanes_data <- nhanes_filtered %>% 
   dplyr::select(Height, Age, Weight, BPSysAve, BPDiaAve,
                 TotChol, SmokeNow, PhysActiveDays) %>%
-  na.omit() 
+  na.omit() %>%
+  dplyr::filter(
+    Height > 0,
+    Weight > 0,
+    BPSysAve > 1,    # Realistic minimum for systolic BP
+    BPDiaAve > 1,    # Realistic minimum for diastolic BP
+    TotChol > 0
+  )
 
 # categorical predictors
 nhanes_data$SmokeNow <- as.factor(nhanes_data$SmokeNow)
@@ -240,13 +247,13 @@ reduced.model <- lm(pb.TotChol ~ Age + pb.Age2 + Height + BPSysAve + BPDiaAve,
 ```
 ```{r, message=FALSE}
 leverage <- hatvalues(reduced.model)
-leverage
+#leverage
 
 ## Threshold
 p <- 5
 high_lev <- 2*(p+1)/n
-high_lev
-
+#high_lev
+```
 ## Find the leverage points
 leverage_points_index <- which(leverage > high_lev)
 leverage_points_index
@@ -261,13 +268,41 @@ st.residuals
 outliers_index <- which(abs(st.residuals)>3)
 outliers_index
 
-```
 
 ```{r}
-#test commit
-summary(reduced.model)
-#test commit
-#test commit
-#test commit #2
-summary(NHANES)
+#FINDING INFLUENTIAL POINTS USING RESIDUALS VS LEVERAGE
+plot(reduced.model)
+
+#TABLE OF INFLUENTIAL OBSERVATIONS
+influential_points <- c(11, 1045, 1269)
+p.BXCX.frame[influential_points, ]
+
+
+reduced.frame <- p.BXCX.frame %>% 
+  dplyr::filter(!row_number() %in% influential_points)
+
+final.model <- lm(pb.TotChol ~ Age + pb.Age2 + Height + BPSysAve + BPDiaAve,
+                        data = reduced.frame)
+```
+```{r, message=FALSE}
+summary(final.model)
+
+plot(final.model)
+```
+```{r, message=FALSE}
+cooks <- cooks.distance(reduced.model)
+plot(reduced.model, which = 4)
+
+# All diagonistic plots
+par(mfrow = c(2, 2))
+plot(reduced.model, which = c(1, 2, 3, 4))
+```
+
+```{r, message=FALSE}
+cooks <- cooks.distance(final.model)
+plot(final.model, which = 4)
+
+# All diagonistic plots
+par(mfrow = c(2, 2))
+plot(final.model, which = c(1, 2, 3, 4))
 ```
